samples/_failures_safe/1761447852_6b7c83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb3e7dc3.c: In function ‘main’:
./samples/SAFE/__tmp_cb3e7dc3.c:150:5: error: expected expression at end of input
  150 |     while (1)
      |     ^~~~~
./samples/SAFE/__tmp_cb3e7dc3.c:150:5: error: expected declaration or statement at end of input
